small fixes, removing console.logs and increasing gap between planets

--- a/Favorites/favorites.css
+++ b/Favorites/favorites.css
@@ -35,6 +35,7 @@ h1 {
 .favorites-card-wrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
   height: 100%;
   div {
     padding: 1rem;
